--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "nodeauth-challenge",
   "version": "1.0.0",
   "description": "Authentication Sprint Challenge",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "server": "nodemon index.js"
+    "start": "node server.js",
+    "server": "nodemon server.js",
+    "test": "jest --watch"
   },
   "repository": {
     "type": "git",
@@ -19,11 +21,22 @@
   "homepage": "https://github.com/LambdaSchool/Sprint-Challenge-Authentication#readme",
   "dependencies": {
     "axios": "^0.19.0",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
+    "bootstrap": "^4.3.1",
     "cors": "^2.8.5",
+    "cross-env": "^5.2.0",
+    "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "helmet": "^3.20.0",
+    "jest": "^24.9.0",
+    "jest-express": "^1.10.1",
+    "jsonwebtoken": "^8.5.1",
     "knex": "^0.19.2",
-    "sqlite3": "^4.1.0"
+    "react-router-dom": "^5.0.1",
+    "reactstrap": "^8.0.1",
+    "sqlite3": "^4.1.0",
+    "supertest": "^4.0.2"
   },
   "devDependencies": {
     "nodemon": "^1.19.1"
